[project]
name = "agentsim-sdk"
version = "0.12.0"
description = "AgentSIM Python SDK — autonomous OTP relay for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agents", "otp", "sms", "ai", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
authors = [
  { name = "AgentSIM", email = "fathin@agentsim.dev" },
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.urls]
Homepage = "https://agentsim.dev"
Repository = "https://github.com/agentsim/agentsim"
Documentation = "https://agentsim.dev/docs"
Changelog = "https://github.com/agentsim/agentsim/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentsim"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

